--- a/.ini
+++ b/.ini
@@ -4,10 +4,10 @@
 
 [PROD]
 SECRET_KEY = secret_prod
-MOVIES_DB_URI = mongodb+srv://seun:samtos2009@orderbird.3zhlh.mongodb.net/test
+MOVIES_DB_URI = mongodb+srv://${USERNAME}:${PASS}@${CLUSTER}.3zhlh.mongodb.net/test
 MOVIES_NS = sample_mflix
 
 [TEST]
 SECRET_KEY = secret_test
-MOVIES_DB_URI = mongodb+srv://seun:samtos2009@orderbird.3zhlh.mongodb.net/test
+MOVIES_DB_URI = mongodb+srv://${USERNAME}:${PASS}@${CLUSTER}.3zhlh.mongodb.net/test
 MOVIES_NS = sample_mflix
