--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 appnope==0.1.0
 attrs==19.1.0
 backcall==0.1.0
-bcrypt
+bcrypt==3.1.7
 bleach>=3.1.0
 cffi==1.13.1
 Click==7.0
@@ -58,7 +58,7 @@ python-dateutil==2.8.0
 pyzmq==18.1.0
 qtconsole==4.5.5
 Send2Trash==1.5.0
-six
+six==1.12.0
 terminado==0.8.2
 testpath==0.4.2
 text-unidecode==1.2
