--- a/.ini
+++ b/.ini
@@ -4,7 +4,7 @@
 
 [PROD]
 SECRET_KEY = secret_prod
-MOVIES_DB_URI = mongodb+srv://seun:samtos2009@orderbird.3zhlh.mongodb.net/test
+MOVIES_DB_URI = ""
 MOVIES_NS = sample_mflix
 
 [TEST]
